--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
       <version>4.3.10.RELEASE</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.18</version>
+      <scope>provided</scope>
+    </dependency>
+
 
   </dependencies>
   <build>
