--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,18 @@
 
   <properties>
 
+    <spring-version>4.3.10.RELEASE</spring-version>
     <mysql-connector-java-version>5.1.43</mysql-connector-java-version>
 
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>${spring-version}</version>
+    </dependency>
 
     <dependency>
       <groupId>mysql</groupId>
