--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 
     <spring-version>4.3.10.RELEASE</spring-version>
     <mysql-connector-java-version>5.1.43</mysql-connector-java-version>
+    <junit-version>4.12</junit-version>
 
   </properties>
 
@@ -34,6 +35,13 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>${mysql-connector-java-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit-version}</version>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
