[5.4] 메일 서비스 추상화
- 사용자 정보에 email 필드 추가 및 전체 예제 코드에 반영
- JavaMail API를 사용하여 메일 전송하는 시나리오 작성

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 
     <spring-version>4.3.10.RELEASE</spring-version>
     <mysql-connector-java-version>5.1.43</mysql-connector-java-version>
+    <javax-mail-version>1.4.7</javax-mail-version>
     <junit-version>4.12</junit-version>
 
   </properties>
@@ -35,6 +36,12 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>${mysql-connector-java-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>${javax-mail-version}</version>
     </dependency>
 
     <dependency>
