각 환경에 맞게 프로퍼티 설정

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,36 @@
 
 
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>dev</id>
+      <properties>
+        <env>dev</env>
+      </properties>
+    </profile>
+    <profile>
+      <id>real</id>
+      <properties>
+        <flavor>real</flavor>
+      </properties>
+    </profile>
+  </profiles>
+
   <build>
     <finalName>study</finalName>
+    <resources>
+
+      <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+
+      <resource>
+        <directory>src/main/resources-${env}</directory>
+      </resource>
+
+    </resources>
   </build>
+
+
 </project>
