--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <mysql-connector-java-version>5.1.43</mysql-connector-java-version>
     <javax-mail-version>1.4.7</javax-mail-version>
     <junit-version>4.12</junit-version>
+    <mockito-version>2.9.0</mockito-version>
 
   </properties>
 
@@ -63,6 +64,14 @@
       <version>${junit-version}</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${mockito-version}</version>
+      <scope>test</scope>
+    </dependency>
+
 
   </dependencies>
   <build>
