--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
     </dependency>
 
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-oxm</artifactId>
+      <version>${spring-version}</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>study</finalName>
