--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <junit-version>4.12</junit-version>
     <mockito-version>2.9.0</mockito-version>
     <castor-version>1.4.1</castor-version>
+    <hsqldb-version>2.3.4</hsqldb-version>
 
 
   </properties>
@@ -86,6 +87,14 @@
       <artifactId>castor-xml</artifactId>
       <version>${castor-version}</version>
     </dependency>
+
+
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>${hsqldb-version}</version>
+    </dependency>
+
 
   </dependencies>
   <build>
